--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,22 @@
 {
   "hosting": {
+    "public": "frontend/dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "/api/**",
         "run": {
-          "serviceId": "<your-service-id>",
+          "serviceId": "fire-backend",
           "region": "<your-region>"
         }
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
     ]
   }
